[package]
name = "punch-o-meter"
version = "0.1.0"
authors = ["Henrik Böving <hargonix@gmail.com>"]
edition = "2018"

[dependencies]
nrf52832-hal = "0.10.0"
cortex-m = "0.7.3"
cortex-m-rt = "0.6.15"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
nb = "1.0.0"
